# Voltra

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  README.md  docker-compose.yml  install.sh
conf/: CMakeLists.txt  Environment.h.in
include/: CMakeLists.txt  Forumla.h  Voltra.h.in
scripts/: compile.sh  run.sh  test.sh
scripts/hooks/: pre-commit.sh
src/: CMakeLists.txt  Forumla.cpp  Forumla.h  main.cpp
test/: CMakeLists.txt  Environment_test.cpp  Formula_test.cpp
